src/test/deca/context/invalid/created/null-int2.deca
//Description :
// Test d'une reassignation d'un entier à null
//
// Resultats :
//  Erreur


{
    int a = 3;
    a = null;
}